# fairy

./: .gitignore  Cargo.toml  TODO
benches/: common.rs  perft.rs  tablebase.rs
derive_enum/: Cargo.toml
derive_enum/derive_enum_impl/: Cargo.toml
derive_enum/derive_enum_impl/src/: lib.rs
derive_enum/src/: lib.rs
derive_enum/tests/: test.rs
derive_rand/: Cargo.toml
derive_rand/src/: lib.rs
derive_rand/tests/: test.rs
src/: board.rs  coord.rs  lib.rs  main.rs  moves.rs  nn.rs  nn_ai.rs  nn_tablebase.rs  perft.rs  piece.rs  player.rs  tablebase.rs  timer.rs
tests/: common.rs  fuzz.rs  perft.rs  tablebase.rs
