[package]
name = "fairy"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1
panic = "abort"
codegen-units = 1
lto = "thin"

[dependencies]
derive_rand = { path = "derive_rand" }
arrayvec = "0.7"
rand = "0.8"
static_assertions = "1.1"
num-traits = "0.2"
num-derive = "0.3"
rustc-hash = { version = "1.1", default-features = false }

[dev-dependencies]
criterion = "0.4"
perfcnt = "0.8"

[[bench]]
name = "tablebase"
harness = false

[[bench]]
name = "perft"
harness = false
