[package]
name = "fairy"
version = "0.1.0"
edition = "2021"

[features]
tablebase_stalemate_win = []
debug_tablebase = []

[profile.release]
debug = 1
panic = "abort"
codegen-units = 1
lto = "thin"

[profile.test]
inherits = "dev"
debug = 1
opt-level = 1
debug-assertions = true
incremental = false

[dependencies]
derive_rand = { path = "derive_rand" }
derive_enum = { path = "derive_enum" }
arrayvec = "0.7"
rand = "0.8"
static_assertions = "1.1"
num-traits = "0.2"
num-derive = "0.3"
rustc-hash = "1.1"

[dev-dependencies]
criterion = "0.4"
perfcnt = "0.8"

[[bench]]
name = "tablebase"
harness = false

[[bench]]
name = "perft"
harness = false
