[package]
name = "fairy"
version = "0.1.0"
edition = "2021"

[features]
tablebase_stalemate_win = []

[profile.release]
debug = 1
panic = "abort"
codegen-units = 1
lto = "thin"

[profile.test]
inherits = "dev"
debug = 1
opt-level = 1
debug-assertions = true
incremental = false

[dependencies]
derive_rand = { path = "derive_rand" }
derive_enum = { path = "derive_enum" }
arrayvec = "0.7"
rand = "0.8"
static_assertions = "1.1"
rustc-hash = "1.1"
threadpool = "1.8"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
criterion = { version = "0.4", default-features = false }
perf-event = "0.4"

[[bench]]
name = "tablebase"
harness = false

[[bench]]
name = "perft"
harness = false
